@startuml

title __BACKGROUND's Class Diagram__\n

  namespace com.doitstudio.sleepest_master {
    namespace background {
      class com.doitstudio.sleepest_master.background.AlarmReceiver {
          {static} + cancelAlarm()
          {static} + createInformationNotification()
          {static} + isAlarmManagerActive()
          + onReceive()
          {static} + startAlarmManager()
      }
    }
  }
  

  namespace com.doitstudio.sleepest_master {
    namespace background {
      class com.doitstudio.sleepest_master.background.ForegroundService {
          - actualWakeUp : int
          - alarmTimeInSeconds : int
          - bannerConfig : boolean[]
          {static} - foregroundServiceStartTime : int
          - isAlarmActive : boolean
          - isServiceStarted : boolean
          - isSleeping : boolean
          - isSubscribed : boolean
          - sleepValueAmount : int
          - userInformed : boolean
          - userSleepTime : int
          - wakeLock : WakeLock
          + OnAlarmChanged()
          + OnBannerConfigChanged()
          + OnSleepApiDataChanged()
          + OnSleepTimeChanged()
          {static} + getForegroundServiceTime()
          + onBind()
          + onCreate()
          + onDestroy()
          + onStartCommand()
          {static} + startOrStopForegroundService()
          + updateNotification()
          - checkAlarmSet()
          - checkPossibleAlarm()
          - createNotification()
          - fillList()
          - getRealAlarmTime()
          - sendUserInformation()
          {static} - setForegroundServiceStartTime()
          - setPreferences()
          - showForegroundNotification()
          - startService()
          - stopService()
      }
    }
  }
  

  namespace com.doitstudio.sleepest_master {
    namespace background {
      class com.doitstudio.sleepest_master.background.WorkmanagerCalculation {
          {static} - context : Context
          + WorkmanagerCalculation()
          + doWork()
          {static} + startPeriodicWorkmanager()
          {static} + stopPeriodicWorkmanager()
      }
    }
  }
  

  com.doitstudio.sleepest_master.background.AlarmReceiver -up-|> android.content.BroadcastReceiver
  com.doitstudio.sleepest_master.background.ForegroundService -up-|> androidx.lifecycle.LifecycleService
  com.doitstudio.sleepest_master.background.ForegroundService o-- com.doitstudio.sleepest_master.background.ForegroundObserver : foregroundObserver
  com.doitstudio.sleepest_master.background.ForegroundService o-- com.doitstudio.sleepest_master.background.AlarmCycleState : alarmCycleState
  com.doitstudio.sleepest_master.background.ForegroundService o-- com.doitstudio.sleepest_master.storage.db.AlarmEntity : alarmEntity
  com.doitstudio.sleepest_master.background.ForegroundService o-- com.doitstudio.sleepest_master.storage.DataStoreRepository : dataStoreRepository
  com.doitstudio.sleepest_master.background.ForegroundService o-- com.doitstudio.sleepest_master.storage.DatabaseRepository : databaseRepository
  com.doitstudio.sleepest_master.background.ForegroundService o-- com.doitstudio.sleepest_master.util.NotificationUtil : notificationUtil
  com.doitstudio.sleepest_master.background.ForegroundService o-- com.doitstudio.sleepest_master.sleepcalculation.SleepCalculationHandler : sleepCalculationHandler
  com.doitstudio.sleepest_master.background.ForegroundService o-- com.doitstudio.sleepest_master.googleapi.SleepHandler : sleepHandler
  com.doitstudio.sleepest_master.background.WorkmanagerCalculation -up-|> androidx.work.Worker
  com.doitstudio.sleepest_master.background.WorkmanagerCalculation o-- com.doitstudio.sleepest_master.sleepcalculation.SleepCalculationHandler : sleepCalculationHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
